--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-dev": "webpack --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +26,67 @@
   },
   "homepage": "https://github.com/lbryio/www.spee.ch#readme",
   "dependencies": {
+    "axios": "^0.16.1",
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.17.1",
+    "babel-polyfill": "^6.26.0",
+    "config": "^1.26.1",
+    "connect-multiparty": "^2.0.0",
+    "cookie-session": "^2.0.0-beta.3",
+    "cross-fetch": "^1.1.1",
+    "express": "^4.15.2",
+    "express-handlebars": "^3.0.0",
+    "form-data": "^2.3.1",
+    "helmet": "^3.8.1",
+    "mysql2": "^1.3.5",
+    "node-fetch": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package-no-bundle"
+    "react-dom": "^16.2.0",
+    "react-ga": "^2.4.1",
+    "react-helmet": "^5.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "sequelize": "^4.1.0",
+    "sequelize-cli": "^3.0.0-3",
+    "universal-analytics": "^0.4.13",
+    "webpack-node-externals": "^1.6.0",
+    "whatwg-fetch": "^2.0.3",
+    "winston": "^2.3.1",
+    "winston-slack-webhook": "billbitt/winston-slack-webhook",
+    "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package-no-build"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "css-loader": "^0.28.9",
+    "eslint": "4.18.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-jsx": "^5.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^4.2.3",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-standard": "^3.0.1",
+    "husky": "^0.13.4",
+    "mocha": "^4.0.1",
+    "nodemon": "^1.15.1",
+    "redux-devtools": "^3.4.1",
+    "regenerator-transform": "^0.12.3",
+    "webpack": "^3.10.0",
+    "webpack-merge": "^4.1.2"
   }
 }
