--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node index.js",
     "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-dev": "webpack --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.config.js",
+    "build-dev": "webpack --config webpack.config.js  --watch"
   },
   "repository": {
     "type": "git",
@@ -26,12 +26,15 @@
   },
   "homepage": "https://github.com/lbryio/www.spee.ch#readme",
   "dependencies": {
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "react": "^16.2.0",
     "webpack": "^3.10.0",
+    "webpack-node-externals": "^1.6.0",
     "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package-yes-build"
   }
 }
