--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node index.js",
     "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
-    "build-dev": "webpack --config webpack.config.js  --watch"
+    "build": "webpack --config webpack.prod.js",
+    "build-dev": "webpack --config webpack.dev.js  --watch",
+    "build-dev-client": "webpack --config webpack.dev.client.js  --watch",
+    "build-dev-server": "webpack --config webpack.dev.server.js  --watch"
   },
   "repository": {
     "type": "git",
@@ -57,7 +59,7 @@
     "universal-analytics": "^0.4.13",
     "whatwg-fetch": "^2.0.3",
     "winston": "^2.3.1",
-    "winston-slack-webhook": "billbitt/winston-slack-webhook"
+    "winston-slack-webhook": "billbitt/winston-slack-webhook",
     "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package-components-and-routes"
   },
   "devDependencies": {
@@ -68,6 +70,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "webpack": "^3.10.0",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "webpack-merge": "^4.1.2"
   }
 }
