--- a/package.json
+++ b/package.json
@@ -28,49 +28,9 @@
   },
   "homepage": "https://github.com/billbitt/billbitt.spee.ch#readme",
   "dependencies": {
-    "axios": "^0.16.1",
-    "bcrypt": "^1.0.3",
-    "body-parser": "^1.17.1",
-    "config": "^1.26.1",
-    "connect-multiparty": "^2.0.0",
-    "cookie-session": "^2.0.0-beta.3",
-    "cross-fetch": "^1.1.1",
-    "express": "^4.15.2",
-    "express-handlebars": "^3.0.0",
-    "form-data": "^2.3.1",
-    "helmet": "^3.8.1",
-    "mysql2": "^1.3.5",
-    "node-fetch": "^2.0.0",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-ga": "^2.4.1",
-    "react-helmet": "^5.2.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "redux-saga": "^0.16.0",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2",
-    "sequelize": "^4.1.0",
-    "sequelize-cli": "^3.0.0-3",
-    "universal-analytics": "^0.4.13",
-    "whatwg-fetch": "^2.0.3",
-    "winston": "^2.3.1",
-    "winston-slack-webhook": "billbitt/winston-slack-webhook",
     "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package-components-and-routes"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "webpack": "^3.10.0",
-    "webpack-node-externals": "^1.6.0",
-    "webpack-merge": "^4.1.2"
+    "nodemon": "^1.15.1"
   }
 }
