added localPublic folder and ability to server static from that folder

--- a/config/siteConfig.js.example
+++ b/config/siteConfig.js.example
@@ -25,4 +25,7 @@ module.exports = {
         thumbnailChannelId      : '',  // use the channel id for your thumbnail channel
         uploadDirectory         : '/home/lbry/Uploads',  // adjust this file path as necessary
     },
+    routes: {
+        publicFolder: null,  // 'localPublic'
+    },
 };
