added build for server to handle custom pages

--- a/config/siteConfig.js.example
+++ b/config/siteConfig.js.example
@@ -26,6 +26,6 @@ module.exports = {
         uploadDirectory         : '/home/lbry/Uploads',  // adjust this file path as necessary
     },
     routes: {
-        publicFolder: null,  // 'localPublic'
+        publicFolder: 'static',
     },
 };
