--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "homepage": "https://github.com/billbitt/billbitt.spee.ch#readme",
   "dependencies": {
-    "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package-configs-custom-homepage"
+    "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package-configs-custom-homepage",
+    "spee.ch-components": "git://github.com/billbitt/spee.ch-components.git"
   },
   "devDependencies": {
     "nodemon": "^1.15.1",
