--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/billbitt/billbitt.spee.ch#readme",
   "dependencies": {
     "spee.ch": "git://github.com/lbryio/spee.ch.git#speech-as-a-package-external-lib",
-    "spee.ch-components": "git://github.com/billbitt/spee.ch-components.git#dynamic-import"
+    "spee.ch-components": "git://github.com/billbitt/spee.ch-components.git"
   },
   "devDependencies": {
     "nodemon": "^1.15.1",
